# transcribe

./: .gitignore  README.md  docker-compose.yml
server/: .vercelignore  Dockerfile  development.Dockerfile  fly.toml  main.py  production.Dockerfile  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 74804068745f_init.py
server/db/: base.py  db.py  models.py  schema.sql
server/lib/: auth.py  config.py  constansts.py  model.py  transcription.py
server/middleware/: auth.py
server/models/: __init__.py  response.py  sessions.py  user.py
server/routes/: auth.py  sessions.py  transcription.py
server/schemas/: response.py  session.py  user.py
server/tests/: conftest.py  test_auth.py  test_main.py  test_middleware.py  test_sessions.py
web/: development.Dockerfile  package-lock.json  package.json  production.Dockerfile
web/app/: layout.tsx  page.tsx
web/app/login/: page.tsx
web/app/session/[session_id]/: page.tsx
web/app/signup/: page.tsx
web/app/test-transcription/: page.tsx
web/components/: query-provider.tsx
web/components/layout/: app-layout.tsx  navbar.tsx  sidebar.tsx
web/components/transcription/: finalizing-loader.tsx  recording-button.tsx  transcription-display.tsx
web/components/ui/: text-stream.tsx
web/lib/: api-client.ts  api.ts  audio.ts  auth-api.ts  auth-context.tsx  react-query.d.ts  sessions-api.ts  types.ts  websocket.ts
