[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt",
    "fastapi",
    "faster-whisper",
    "psycopg2-binary",
    "pyjwt",
    "pydantic-settings",
    "sqlalchemy",
    "uvicorn",
    "websockets",
    "email-validator",
    "alembic"
]
