[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt",
    "fastapi",
    "faster-whisper",
    "psycopg2-binary",
    "pyjwt",
    "pydantic-settings",
    "sqlalchemy",
    "uvicorn",
    "websockets",
    "email-validator",
    "alembic"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "httpx",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["alembic", "db", "lib", "middleware", "routes", "schemas"]
